--- a/synergyZone/src/main/resources/application.properties
+++ b/synergyZone/src/main/resources/application.properties
@@ -5,8 +5,8 @@ server.port=8080
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
 #spring.datasource.url=jdbc:oracle:thin:@www.sysout.co.kr:1521:xe
-spring.datasource.username=kh11
-spring.datasource.password=kh11
+spring.datasource.username=kh11fb
+spring.datasource.password=kh11fb
 
 # DBCP(DataBase Connection Pool)
 spring.datasource.dbcp2.max-total=20
@@ -42,7 +42,7 @@ logging.pattern.console=[%-5level] %msg - %c [%d{yyyy-MM-dd HH:mm:ss.S}] %n
 
 #mybatis
 mybatis.configuration.map-underscore-to-camel-case=true
-mybatis.type-aliases-package=com.kh.idolsns.dto,com.kh.idolsns.vo
+mybatis.type-aliases-package=com.kh.synergyZone.dto, com.kh.synergyZone.vo
 mybatis.mapper-locations=/mybatis/mapper/**/*-mapper.xml
 
 #open-api
