--- a/synergyZone/src/main/resources/application.properties
+++ b/synergyZone/src/main/resources/application.properties
@@ -3,10 +3,10 @@ server.port=8080
 
 # database setting
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.url=jdbc:oracle:thin:@khds-c.iptime.org:15212:xe
 #spring.datasource.url=jdbc:oracle:thin:@www.sysout.co.kr:1521:xe
-spring.datasource.username=kh11
-spring.datasource.password=kh11
+spring.datasource.username=kh11fb
+spring.datasource.password=kh11fb
 
 # DBCP(DataBase Connection Pool)
 spring.datasource.dbcp2.max-total=20
