--- a/synergyZone/src/main/resources/application.properties
+++ b/synergyZone/src/main/resources/application.properties
@@ -31,8 +31,8 @@ spring.web.resources.static-locations=classpath:/static/
 
 # logging
 logging.level.root=error
-logging.level.com.hacademy=debug
-logging.level.member=debug
+logging.level.com.kh=debug
+logging.level.synergyZone=debug
 logging.pattern.console=[%-5level] %msg - %c [%d{yyyy-MM-dd HH:mm:ss.S}] %n
 
 #logging.pattern.file=[%-5level] [%d{yyyy-MM-dd HH:mm:ss.S}] %c - %msg %n
@@ -54,7 +54,7 @@ spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
 # file-directory setting
-custom.filedir.path=D:/final
+custom.filedir.path=D:/upload/kh11fb
 #custom.fileupload.path=C:/upload/kh11
 
 # custom setting
