형석 연습중

--- a/synergyZone/src/main/resources/application.properties
+++ b/synergyZone/src/main/resources/application.properties
@@ -47,7 +47,7 @@ mybatis.mapper-locations=/mybatis/mapper/**/*-mapper.xml
 
 #open-api
 springdoc.swagger-ui.path=/swagger-ui.html
-springdoc.packages-to-scan=com.kh.idolsns.rest
+springdoc.packages-to-scan=com.kh.synergyZone.rest
 
 # view resolver setting
 spring.mvc.view.prefix=/WEB-INF/views/
