--- a/synergyZone/src/main/resources/application.properties
+++ b/synergyZone/src/main/resources/application.properties
@@ -4,7 +4,6 @@ server.port=8080
 # database setting
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@khds-c.iptime.org:15212:xe
-#spring.datasource.url=jdbc:oracle:thin:@www.sysout.co.kr:1521:xe
 spring.datasource.username=kh11fb
 spring.datasource.password=kh11fb
 
@@ -47,23 +46,9 @@ mybatis.mapper-locations=/mybatis/mapper/**/*-mapper.xml
 
 #open-api
 springdoc.swagger-ui.path=/swagger-ui.html
-springdoc.packages-to-scan=com.kh.idolsns.rest
+springdoc.packages-to-scan=com.kh.synergyZone.rest
 
 # view resolver setting
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
-
-# file-directory setting
-custom.filedir.path=D:/final
-#custom.fileupload.path=C:/upload/kh11
-
-# custom setting
-# custom.email.host=smtp.gmail.com
-# custom.email.port=587
-# custom.email.username=
-# custom.email.password=
-
-# payment data
-# custom.kakaopay.cid=TC0ONETIME
-# custom.kakaopay.key=
 
