--- a/synergyZone/pom.xml
+++ b/synergyZone/pom.xml
@@ -8,7 +8,7 @@
 		<version>2.7.11</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.kh.spring22</groupId>
+	<groupId>com.kh.synergyZone</groupId>
 	<artifactId>synergyZone</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
