--- a/synergyZone/src/main/resources/application.properties
+++ b/synergyZone/src/main/resources/application.properties
@@ -54,7 +54,7 @@ spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
 # file-directory setting
-#custom.filedir.path=D:/final/upload/kh11fb 
+custom.fileupload.path=D:/final/upload/kh11fb
 #custom.fileupload.path=C:/upload/kh11fb 
 
 # custom setting
