--- a/synergyZone/src/main/resources/application.properties
+++ b/synergyZone/src/main/resources/application.properties
@@ -31,7 +31,7 @@ spring.web.resources.static-locations=classpath:/static/
 
 # logging
 logging.level.root=error
-logging.level.com.hacademy=debug
+logging.level.com.kh=debug
 logging.level.member=debug
 logging.pattern.console=[%-5level] %msg - %c [%d{yyyy-MM-dd HH:mm:ss.S}] %n
 
