--- a/synergyZone/src/main/resources/application.properties
+++ b/synergyZone/src/main/resources/application.properties
@@ -30,8 +30,8 @@ spring.web.resources.static-locations=classpath:/static/
 
 # logging
 logging.level.root=error
-logging.level.com.kh=debug
-logging.level.synergyZone=debug
+logging.level.com.kh=info
+logging.level.synergyZone=info
 logging.pattern.console=[%-5level] %msg - %c [%d{yyyy-MM-dd HH:mm:ss.S}] %n
 
 #logging.pattern.file=[%-5level] [%d{yyyy-MM-dd HH:mm:ss.S}] %c - %msg %n
