--- a/synergyZone/src/main/resources/application.properties
+++ b/synergyZone/src/main/resources/application.properties
@@ -19,7 +19,7 @@ management.endpoints.web.exposure.include=mappings,beans,env
 
 # file upload setting (multipart resolver)
 spring.servlet.multipart.enabled=true
-spring.servlet.multipart.max-file-size=1MB
+spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
 # 404 error setting + static resource path setting
@@ -54,7 +54,7 @@ spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
 # file-directory setting
-custom.fileupload.path=D:/final/upload/kh11fb
+custom.fileupload.path=C:/final/upload/kh11fb
 #custom.fileupload.path=C:/upload/kh11fb 
 
 # custom setting
