--- a/synergyZone/.settings/org.eclipse.core.resources.prefs
+++ b/synergyZone/.settings/org.eclipse.core.resources.prefs
@@ -6,4 +6,5 @@ encoding//src/main/java=UTF-8
 encoding//src/main/resources=UTF-8
 encoding//src/main/webapp/WEB-INF/views/admin/detail.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/commute/commute.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/views/login.jsp=UTF-8
 encoding/<project>=UTF-8
