--- a/synergyZone/src/main/resources/application.properties
+++ b/synergyZone/src/main/resources/application.properties
@@ -34,6 +34,7 @@ logging.level.root=error
 logging.level.com.kh=debug
 logging.level.synergyZone=debug
 logging.level.bookmark=debug
+logging.level.approval=debug
 logging.pattern.console=[%-5level] %msg - %c [%d{yyyy-MM-dd HH:mm:ss.S}] %n
 
 #logging.pattern.file=[%-5level] [%d{yyyy-MM-dd HH:mm:ss.S}] %c - %msg %n
