--- a/synergyZone/src/main/resources/application.properties
+++ b/synergyZone/src/main/resources/application.properties
@@ -60,10 +60,10 @@ custom.fileupload.path=D:/final/upload/kh11fb
 #custom.fileupload.path=C:/upload/kh11fb 
 
 # custom setting
-# custom.email.host=smtp.gmail.com
-# custom.email.port=587
-# custom.email.username=
-# custom.email.password=
+custom.email.host=smtp.gmail.com
+custom.email.port=587
+custom.email.username=yurimtest1234@gmail.com
+custom.email.password=zajdawczihlcqouo
 
 # payment data
 # custom.kakaopay.cid=TC0ONETIME
