--- a/synergyZone/pom.xml
+++ b/synergyZone/pom.xml
@@ -127,6 +127,21 @@
 		    <artifactId>jsoup</artifactId>
 		    <version>1.15.4</version>
 		</dependency>
+		<!-- 썸네일 -->
+		<dependency>
+		    <groupId>net.coobird</groupId>
+		    <artifactId>thumbnailator</artifactId>
+		    <version>0.4.14</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-xml</artifactId>
+		</dependency>
+		
 
 	</dependencies>
 	<build>
