--- a/synergyZone/src/main/resources/application.properties
+++ b/synergyZone/src/main/resources/application.properties
@@ -56,7 +56,7 @@ spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
 # file-directory setting
-custom.fileupload.path=C:/final/upload/kh11fb
+custom.fileupload.path=D:/final/upload/kh11fb
 #custom.fileupload.path=C:/upload/kh11fb 
 
 # custom setting
