--- a/synergyZone/src/main/resources/application.properties
+++ b/synergyZone/src/main/resources/application.properties
@@ -58,7 +58,7 @@ spring.mvc.view.suffix=.jsp
 
 # file-directory setting
 #custom.fileupload.path=D:/final/upload/kh11fb
-custom.fileupload.path=C:/upload/kh11fb 
+custom.fileupload.path=C:\upload\kh11fb
 
 # custom setting
 custom.email.host=smtp.gmail.com
