--- a/synergyZone/src/main/resources/application.properties
+++ b/synergyZone/src/main/resources/application.properties
@@ -3,8 +3,8 @@ server.port=8080
 
 # database setting
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-#spring.datasource.url=jdbc:oracle:thin:@www.sysout.co.kr:1521:xe
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.url=jdbc:oracle:thin:@www.sysout.co.kr:1521:xe
+#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
 spring.datasource.username=kh11fb
 spring.datasource.password=kh11fb
 
@@ -58,7 +58,8 @@ spring.mvc.view.suffix=.jsp
 
 # file-directory setting
 #custom.fileupload.path=D:/final/upload/kh11fb
-custom.fileupload.path=C:/upload/kh11fb
+#custom.fileupload.path=C:/upload/kh11fb
+custom.fileupload.path=D:/upload/kh11fb
 
 # custom setting
 custom.email.host=smtp.gmail.com
